welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:9: error: type mismatch;
 found   : Unit
 required: Boolean
  for (l <- 1 to 6){
         ^